--- a/.github/workflows/mainline-protection.yml
+++ b/.github/workflows/mainline-protection.yml
@@ -2,7 +2,7 @@ name: Mainline Protection
 on:
   pull_request:
     branches:
-      - master
+      - mainline
 # The purpose of this workflow is to create a failing Status check on pull request against mainline. This will prevent
 # PR from being merged into mainline.
 jobs:
